--- a/static-files/css/base.css
+++ b/static-files/css/base.css
@@ -235,41 +235,26 @@ table.meta-table {
     color: red;
 }
 
-
-/*XXXadw*/
-
-.jetpack-lab-editor {
-    padding-left: 1em;
-}
-
 textarea {
-    border: 3px solid transparent;
+    border: none;
     font-family: Monaco, Lucida Console, monospace;
     font-size: 8pt;
-    padding: 1em;
 }
 
 textarea.jetpack-lab-editor-code {
-/*    background: #ddf;*/
-    background: #f0f0f0;
+    border: 1px dashed #aaa;
     margin-bottom: 1em;
-}
-
-textarea.jetpack-lab-editor-code:hover,
-textarea.jetpack-lab-editor-code:focus {
-/*    border: 3px solid #ccf;*/
-    border-color: #d0d0d0;
+    padding: 1em;
 }
 
 textarea.jetpack-lab-editor-console {
-    background: #ffc;
+    margin-top: 1em;
 }
 
-textarea.jetpack-lab-editor-console:hover,
-textarea.jetpack-lab-editor-console:focus {
-    border-color: #ff9;
+textarea.jetpack-lab-editor-console-error {
+    color: red;
 }
 
-.jetpack-lab-editor-buttons {
-    margin-bottom: 1em;
+.jetpack-lab-show-when-installed {
+    display: none;
 }
